# bel_motion_planners

./: README.md
docs/: index.html  slides.pptx  style.css
kinova_ws/src/bel_ros_planning/: CMakeLists.txt  package.xml
kinova_ws/src/bel_ros_planning/src/: run_inference.py  run_training.py
kinova_ws/utils/: architectures.py  import_tools.py  inference.yaml  planning_scene_editor.py  utils.py
